# software

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  configure.py  docker-helper.sh  shm  temp_hydrodata.zander  todo.zander
.zsh_comp/: _auv-visiond
aslam/: .gitignore  .stylish-haskell.yaml  README.md  __init__.py  aslam.conf  auv-aslam-cli.py  configure.py  files.py  generate.py
auv_math/: camera.cpp  camera.hpp  camera.py  configure.py  math_utils.py  quat.py  types.hpp
auv_python_helpers/: __init__.py  angles.py  colors.py  misc.py
auvlog/: AUVLog.hs  __init__.py  client.cpp  client.h  client.py  config.py  configure.py  daemon.py  example.cpp  example.py  logger.py  nn.hpp  reader.py
can/: CMakeLists.txt  Command.cpp  Command.h  Culler.cpp  Culler.h  Device.cpp  Device.h  Group.cpp  Group.h  Handler.cpp  Handler.h  Manager.cpp  Manager.h  Poller.cpp  Poller.h  Registry.cpp  Registry.h  ShmDevices.h  ShmMessageBuilder.cpp  ShmMessageBuilder.h  ShmRegistry.h  SimpleRegistry.cpp  SimpleRegistry.h  Thread.cpp  Thread.h  config.py  configure.py  generate.py  host.cpp  runcan.sh  thrust-helm.cpp
can/config/: devices.json  hardware.json
can/lib/: CANSocket.cpp  CANSocket.h  Log.cpp  Log.h  Message.cpp  Message.h  MessageBuilder.cpp  MessageBuilder.h  MessageData.cpp  MessageData.h  Selector.cpp  Selector.h
can/templates/: ShmDevices.cpp  ShmRegistry.cpp
can/util/: FakeDev.cpp  FakeDev.h  commitParam.cpp  getParam.cpp  mon.cpp  reset.cpp  sendParam.cpp  vcandown  vcanup  vdev.cpp
cave/: .gitignore  TODO  addtag.py  addvideo.py  configure.py  (+13 more)
(+1840 files in other folders)
